Ajout de l'administration et de katex pour les expressions mathématiques

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.10.0/katex.min.css">
+
   <meta charset="utf-8">
   <title>Resoc</title>
   <base href="/">
